<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movie_detail.MovieDetailActivity">

    <ImageView
        android:id="@+id/iv_backdrop_movie"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:foreground="@drawable/gradient_backdrop_movie"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/image_for_backdrop_movie" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002">

        <ImageView
            android:id="@+id/iv_movie"
            android:layout_width="130dp"
            android:layout_height="175dp"
            android:contentDescription="@string/image_for_poster_movie"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:minLines="1"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_movie"
        app:layout_constraintTop_toBottomOf="@+id/iv_backdrop_movie"
        tools:text="Godzilla x Kong: The New Empire" />

    <LinearLayout
        android:id="@+id/linear_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="#FF9800"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="7.5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey300"
                android:textSize="11sp"
                android:text="@string/ratings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:indeterminate="false"
                android:max="5"
                android:numStars="5"
                android:progress="3"
                android:progressTint="#FF9800"
                android:stepSize="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey300"
                android:textSize="11sp"
                android:text="@string/grade_now" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/popularity"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/linear_ratings"
        app:layout_constraintTop_toBottomOf="@+id/linear_ratings" />

    <TextView
        android:id="@+id/tv_popularity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_popularity"
        app:layout_constraintStart_toEndOf="@+id/tv_popularity"
        app:layout_constraintTop_toTopOf="@+id/tv_popularity"
        tools:text="10.406" />

    <TextView
        android:id="@+id/tv_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/revenue"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cv_movie"
        app:layout_constraintStart_toStartOf="@+id/tv_popularity"
        app:layout_constraintTop_toBottomOf="@+id/tv_popularity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_revenue_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_revenue"
        app:layout_constraintStart_toStartOf="@+id/tv_popularity_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_popularity_value"
        app:layout_constraintVertical_bias="1.0"
        tools:text="$0.00" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/overview"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_genres"
        app:layout_constraintTop_toBottomOf="@+id/tv_genres" />

    <TextView
        android:id="@+id/tv_overview_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_overview"
        app:layout_constraintTop_toBottomOf="@+id/tv_overview"
        tools:text="Following their explosive showdown, Godzilla and Kong must reunite against a colossal undiscovered threat hidden within our world, challenging their very existence – and our own." />

    <ImageButton
        android:id="@+id/btn_favorite"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title"
        app:srcCompat="@drawable/favorite_condition"
        app:tint="@color/grey300"
        android:contentDescription="@string/button_favorite" />

    <TextView
        android:id="@+id/tv_genres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cv_movie"
        app:layout_constraintTop_toBottomOf="@+id/cv_movie"
        tools:text="Action • Science Fiction • Adventure" />


</androidx.constraintlayout.widget.ConstraintLayout>